<resources>
    <string name="app_name">BDFirebase</string>
    <string name="large_text">
        "Firebase Realtime Database\n\n"

        "Almacena y sincroniza datos con nuestra base de datos NoSQL alojada en la nube. Los datos "
        "se sincronizan con todos los clientes en tiempo real y se mantienen disponibles cuando la "
        "app no tiene conexión.\n\n"
    </string>
    <string name="isc">Ingeniería en Sistemas Computacionales</string>
    <string name="primeroisc">¿Qué es la Ingeniería de Sistemas?</string>
    <string name="segundoisc">Cargando..</string>
    <string name="terceroisc">¿Cual es su campo de acción?</string>
    <string name="cuartoisc"> Cargando..</string>
    <string name="action_settings">Settings</string>
</resources>
