<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#cfd8dc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:baselineAligned="true"
                android:background="@color/barraIi"
                android:id="@+id/tituloISC"
                android:text="@string/isc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"

                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/pregunta1"
                android:background="#ffd54f"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/primeroisc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/respuesta1"
                android:background="#FFFFFF"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/segundoisc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/pregunta2"
                android:background="#ffd54f"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/terceroisc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/respuesta2"
                android:background="#FFFFFF"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/cuartoisc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />


            <TextView
                android:baselineAligned="true"
                android:id="@+id/pregunta3"
                android:background="#ffd54f"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="Cargando.."
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/respuesta3"
                android:background="#FFFFFF"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="Cargando.."
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/pregunta4"
                android:background="#ffd54f"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="Cargando.."
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/respuesta4"
                android:background="#FFFFFF"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="Cargando..."
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />


        </LinearLayout>
    </ScrollView>



</LinearLayout>
